made login ui simpler. minor spacing fixes.

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     border-radius: 8px;
     border: 1px solid #ccc;
     width: 25%;
-    height: 250px;
+    height: 280px;
     padding-bottom: 1rem;
     text-align: center;
 }
